Enabled inertial scrolling on iPhone (issue #135).

--- a/client/src/application.scss
+++ b/client/src/application.scss
@@ -7,7 +7,7 @@
     }
 }
 
-body {
+body, html {
     overflow: hidden;
 }
 
@@ -37,12 +37,13 @@ body {
         top: 0;
         right: 0;
         bottom: 0;
-        overflow-y: auto;
+        overflow-y: scroll;
         overflow-x: hidden;
         z-index: 0;     // drawn beneath the start page (z-index = 1)
         display: flex;
         flex-direction: column;
         align-items: center;
+        -webkit-overflow-scrolling: touch;
 
         &::-webkit-scrollbar-track {
             -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
